# ancestralbrain-app

./: .gitignore  BACKLOG.md  BUILD.md  PLAN.md  PROGRESS.md  deploy.py
.github/workflows/: build.yml
app/: package-lock.json  package.json
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: db.rs  hardware.rs  indexer.rs  lib.rs  main.rs  meta.rs  ollama.rs
app/ui/: main.html  ollama_check.html  onboarding.html
site/: _helpers.php  api.php  dashboard.php  index.html  login.php  logout.php  privacy.html  register.php  save_prefs.php  terms.html  waitlist.php
